# Chariot

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  all-crates-do  appveyor.yml  makefile  rustfmt.toml
crates/: README.md
crates/dat/: Cargo.toml  Credits.md
crates/dat/examples/: read-empires.rs
crates/dat/src/: empires.rs  error.rs  lib.rs
crates/dat/src/empires/: age.rs  civ.rs  graphic.rs  graphics.rs  id.rs  mod.rs  player_color.rs  random_map.rs  research.rs  resource.rs  sound.rs  terrain_block.rs  terrain_restrictions.rs  unit.rs
crates/drs/: Cargo.toml
crates/drs/examples/: extract-drs.rs  read-drs.rs
crates/drs/src/: drs.rs  lib.rs
crates/file_formats/dat/: Cargo.toml
crates/file_formats/dat/examples/: read-empires.rs  read-tileedge.rs
crates/file_formats/dat/src/: error.rs  lib.rs
crates/file_formats/dat/src/empires/: age.rs  civ.rs  graphic.rs  id.rs  mod.rs  player_color.rs  random_map.rs  research.rs  resource.rs  sound.rs  terrain_block.rs  terrain_restrictions.rs  unit.rs
crates/file_formats/dat/src/tileedge/: mod.rs
crates/file_formats/drs/: Cargo.toml  README.md
crates/file_formats/drs/examples/: extract-drs.rs  read-drs.rs
crates/file_formats/drs/src/: drs.rs  error.rs  lib.rs
crates/file_formats/language/: Cargo.toml
crates/file_formats/language/examples/: read-language.rs
crates/file_formats/language/src/: error.rs  language.rs  lib.rs
crates/file_formats/palette/: Cargo.toml  README.md
crates/file_formats/palette/src/: error.rs  lib.rs  palette.rs
crates/file_formats/scn/: Cargo.toml
crates/file_formats/scn/examples/: read-scn.rs
crates/file_formats/scn/src/: error.rs  lib.rs  map.rs  player_data.rs  player_resources.rs  player_unit.rs  scn.rs
crates/file_formats/slp/: Cargo.toml  README.md
crates/file_formats/slp/examples/: read-slp.rs
crates/file_formats/slp/src/: error.rs  lib.rs  slp.rs
crates/identifier/: Cargo.toml
crates/identifier/src/: id.rs  lib.rs
crates/io_tools/: Cargo.toml
crates/io_tools/src/: lib.rs
crates/language/: Cargo.toml
crates/language/examples/: read-language.rs
crates/language/src/: error.rs
crates/media/: Cargo.toml
crates/media/src/: error.rs  key.rs  lib.rs  media.rs  rect.rs  renderer.rs  texture.rs  texture_builder.rs
crates/palette/: Cargo.toml
crates/palette/src/: lib.rs  palette.rs
crates/resource/: Cargo.toml
crates/resource/src/: drs_manager.rs  error.rs  game_dir.rs  lib.rs  render_command.rs  shape_manager.rs  shape_metadata.rs
crates/scn/: Cargo.toml
crates/scn/src/: error.rs  lib.rs  map.rs  player_data.rs  scn.rs
crates/slp/: Cargo.toml
crates/slp/examples/: read-slp.rs
crates/slp/src/: lib.rs  slp.rs
crates/types/: Cargo.toml
crates/types/src/: aabox.rs  color.rs  fixed.rs  lib.rs  point.rs  rect.rs  vector3.rs
data/: nope-64x64.slp
src/: macros.rs  main.rs
src/action/: action.rs  mod.rs  move_to_position.rs
src/ecs/: component.rs  mod.rs  resource.rs  world.rs
src/ecs/component/: action_queue_component.rs  camera_component.rs  decal_component.rs  graphic_component.rs  mod.rs  on_screen_component.rs  selected_unit_component.rs  transform_component.rs  unit_component.rs  velocity_component.rs  visible_unit_component.rs
src/ecs/component/action/: mod.rs  move_to_position.rs
src/ecs/render_system/: decal_render_system.rs  graphic_render_system.rs  mod.rs  render_system.rs  terrain_render_system.rs  tile_debug_render_system.rs  unit_render_system.rs  unit_selection_render_system.rs
src/ecs/resource/: action_batcher.rs  input.rs  mod.rs  occupied_tiles.rs  path_finder.rs  players.rs  render.rs  view_projector.rs  viewport.rs
src/ecs/resource/terrain/: border.rs  dir.rs  elevation.rs  mod.rs  terrain.rs
src/ecs/system/: animation_system.rs  camera_input_system.rs  camera_position_system.rs  decal_system.rs  grid_system.rs  mod.rs  occupied_tile_system.rs  system.rs  unit_action_system.rs  unit_selection_system.rs  velocity_system.rs
src/ecs/system/action/: mod.rs  move_to_position.rs
src/game/: game.rs  mod.rs
src/game/state/: game_state.rs  mod.rs  scenario_game_state.rs
src/partition/: grid.rs  mod.rs
src/terrain/: border.rs  elevation.rs  mod.rs  terrain_blender.rs  terrain_cursor.rs  terrain_renderer.rs
src/util/: mod.rs  unit.rs
tools/drs_browser/: Cargo.toml
tools/drs_browser/src/: main.rs
tools/drs_extractor/: Cargo.toml  README.md
tools/drs_extractor/src/: main.rs
tools/empires/: Cargo.toml
tools/empires/src/: main.rs
tools/empires/src/subcommands/: civ.rs  empires_to_json.rs  mod.rs  unit.rs
tools/export_slp_to_rg8ui/: Cargo.toml
tools/slp2png/: Cargo.toml
tools/slp2png/src/: main.rs
tools/slp_to_rg8ui/: Cargo.toml
tools/slp_to_rg8ui/src/: main.rs
tools/slp_viewer/: Cargo.toml  makefile
tools/slp_viewer/src/: main.rs
tools/slp_viewer_ogl/: Cargo.toml
tools/slp_viewer_ogl/src/: main.rs
