[package]
name = "open_aoe"
version = "0.1.0"
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[profile.dev]
opt-level = 0

[dependencies]
clap = "2.9"
lazy_static = "0.2"
nalgebra = "0.8.2"
num = "0.1"
specs = "0.7"
time = "0.1"

[dependencies.open_aoe_drs]
path = "crates/file_formats/drs"
[dependencies.open_aoe_slp]
path = "crates/file_formats/slp"
[dependencies.open_aoe_palette]
path = "crates/file_formats/palette"
[dependencies.open_aoe_dat]
path = "crates/file_formats/dat"
[dependencies.open_aoe_language]
path = "crates/file_formats/language"
[dependencies.open_aoe_scn]
path = "crates/file_formats/scn"

[dependencies.open_aoe_media]
path = "crates/media"
[dependencies.open_aoe_resource]
path = "crates/resource"
[dependencies.open_aoe_types]
path = "crates/types"
[dependencies.open_aoe_identifier]
path = "crates/identifier"
