[package]
name = "chariot_io_tools"
description = "Chariot helper crate for frequent I/O operations such as reading a byte"
license = "MIT"
version = "0.1.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>", "Kevin Fuller <angered.ghandi@gmail.com>"]
documentation = "https://docs.rs/chariot_io_tools/"
repository = "https://github.com/ChariotEngine/Chariot"

[dependencies]
byteorder = "0.5"
flate2 = "0.2"
