[package]
name = "chariot_media"
description = """
    Chariot media (rendering + audio) crate
"""
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
workspace = "../../"

[dependencies]
error-chain = "0.5"
sdl2 = "0.25"
nalgebra = "0.10"

[dependencies.chariot_types]
path = "../types"
