[package]
name = "chariot_media"
description = """
    Chariot media (rendering + audio) crate
"""
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.5"
nalgebra = "0.12"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2.git"
rev = "121ec0c54d53b8ba2a144e34092e243d12b6c29f"

[dependencies.chariot_types]
path = "../types"
