[package]
name = "chariot_resource"
description = """
    Chariot resource management crate
"""
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.5"
nalgebra = "0.10"
chariot_drs = "0.1"
chariot_slp = "0.1"
chariot_palette = "0.1"

[dependencies.chariot_identifier]
path = "../identifier"
[dependencies.chariot_media]
path = "../media"
[dependencies.chariot_types]
path = "../types"