[package]
name = "open_aoe_scn"
description = """
    A library for reading/writing Age of Empires (1997) scenario files
"""
license = "MIT"
version = "0.1.0"
keywords = ["scn", "scenario", "aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.1.12"

[dependencies.io_tools]
path = "../io_tools"

[dev-dependencies]
clap = "2.6.0"
