[package]
name = "chariot_types"
description = """
    Chariot types crate
"""
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
workspace = "../../"

[dependencies]
nalgebra = "0.10"
num = "0.1"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2.git"
rev = "121ec0c54d53b8ba2a144e34092e243d12b6c29f"
