[package]
name = "open_aoe_types"
description = """
    OpenAOE types crate
"""
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
workspace = "../../"

[dependencies]
nalgebra = "0.10"
num = "0.1"

# TODO: Move sdl2 back into the dependencies ASAP (hopefully 0.3)
[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2.git"
rev = "1f1d8fadc7a915eb9a72a4090ac6b0a3fe5376da"