[package]
name = "chariot_types"
description = """
    Chariot types crate
"""
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
workspace = "../../"

[dependencies]
nalgebra = "0.10"
num = "0.1"
sdl2 = "0.25"
