[package]
name = "drs_extractor"
version = "0.1.0"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
workspace = "../../"

[dependencies]
clap = "2.17"

[dependencies.chariot_drs]
path = "../../crates/file_formats/drs"
[dependencies.chariot_slp]
path = "../../crates/file_formats/slp"
[dependencies.chariot_palette]
path = "../../crates/file_formats/palette"
