[package]
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
name = "empires"
version = "0.1.0"

[features]
default = [
    "chariot_identifier/json",
    "chariot_dat/json"
]

[dependencies]
clap = "2.29.4"
serde = "1.0.27"
serde_json = "1.0.9"

[dependencies.chariot_dat]
path = "../../crates/file_formats/dat"

[dependencies.chariot_identifier]
path = "../../crates/identifier"
