[package]
name = "slp_viewer"
version = "0.1.0"
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
workspace = "../../"

[dependencies]
clap = "2.17"
minifb = "0.9"

[dependencies.open_aoe_drs]
path = "../../crates/file_formats/drs"
[dependencies.open_aoe_slp]
path = "../../crates/file_formats/slp"
[dependencies.open_aoe_palette]
path = "../../crates/file_formats/palette"
