[package]
name = "slp_viewer"
version = "0.1.0"
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
clap = "2.17"
minifb = "0.9"

[dependencies.chariot_drs]
path = "../../crates/file_formats/drs"
[dependencies.chariot_slp]
path = "../../crates/file_formats/slp"
[dependencies.chariot_palette]
path = "../../crates/file_formats/palette"
