[package]
name = "open_aoe_dat"
description = """
    A library for reading/writing Age of Empires (1997) DAT files
"""
license = "MIT"
version = "0.1.0"
keywords = ["dat", "aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
quick-error = "1.1"

[dependencies.io_tools]
path = "../../io_tools"

[dev-dependencies]
clap = "2.6.0"
