[package]
name = "open_aoe_dat"
description = """
    A library for reading/writing Age of Empires (1997) DAT files
"""
license = "MIT"
version = "0.1.0"
keywords = ["dat", "aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.2"

[dependencies.io_tools]
path = "../../io_tools"
[dependencies.open_aoe_identifier]
path = "../../identifier"

[dev-dependencies]
clap = "2.9"
