[package]
name = "chariot_dat"
description = """
    A library for reading/writing Age of Empires (1997) DAT files
"""
license = "MIT"
version = "0.1.0"
keywords = ["dat", "aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.5"

[dependencies.chariot_io_tools]
path = "../../io_tools"
[dependencies.chariot_identifier]
path = "../../identifier"

[dev-dependencies]
clap = "2.17"
