[package]
name = "open_aoe_slp"
description = """
    A library for reading/writing Age of Empires (1997) SLP files
"""
license = "MIT"
version = "0.1.0"
keywords = ["slp", "aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
workspace = "../../../"

[dependencies]
error-chain = "0.5"

[dependencies.io_tools]
path = "../../io_tools"

[dev-dependencies]
clap = "2.17"
